# ImageFlipServer

./: .gitignore  README.md  http_connection.cpp  http_connection.h  main.cpp  server.cpp  server.h
client_for_tests/: CMakeLists.txt  client.cpp  client.h  main.cpp
server/: CMakeLists.txt  constants.h  http_connection.cpp  http_connection.h  main.cpp  server.cpp  server.h
